@@ -313,6 +313,14 @@
   :-moz-border-radius 4px
   :-webkit-border-radius 4px
 
+.filters
+  h4
+    :color navy
+    :font-size 12px
+    :font-weight bold
+  input[type=text]
+    :margin-bottom 4px
+
 .panel
   div
     :margin 0px 0px 10px 0px
@@ -326,9 +334,8 @@
     :padding 2px 0px 3px 0px
     dt
       :float right
-      :font
-        :size 11px
-        :weight bold
+      :font-size 11px
+      :font-weight bold
     tt
       :font-size 11px
     &.last
@@ -342,14 +349,6 @@
       :weight bold
     :margin 4px 0px 2px 0px
     :padding 2px 0px 2px 0px
-
-  .field
-    :color navy
-    :float left
-    :font
-      :size 12px
-      :weight bold
-    :height 16px
 
 .selector
   :color black
