@@ -1,5 +1,5 @@
-= render :partial => "common/search"
 .filters#filters
+  = render :partial => "common/search"
   - Setting.invert(:lead_status).each do |key, value|
     .check_box{:style => "border-bottom: 1px silver dotted;"}
       %div{:style => "float:right;"}
