@@ -53,16 +53,6 @@ describe LeadsController do
     end
 
     describe "AJAX pagination" do
-      it "should use default page number of 1" do
-        @leads = [ Factory(:lead, :user => @current_user) ]
-        xhr :get, :index
-
-        assigns[:current_page].should == 1
-        assigns[:leads].should == @leads
-        session[:leads_current_page].should == 1
-        response.should render_template("leads/index")
-      end
-
       it "should pick up page number from params" do
         @leads = [ Factory(:lead, :user => @current_user) ]
         xhr :get, :index, :page => 42
@@ -515,25 +505,19 @@ describe LeadsController do
       @leads = [ @billy_bones, @captain_flint ]
     end
 
-    it "should redirecto to index if the search string contains garbage or is empty" do
-      xhr :get, :search, :query => "%*&'[]"
-
-      assigns[:query].should == ""
-      response.body.should == %Q(window.location.href = "/leads";) # Ajax redirect
-    end
-
-    it "should look up the leads using query string" do
+    it "should perform lookup using query string and redirect to index" do
       xhr :get, :search, :query => "bill"
 
       assigns[:leads].should == [ @billy_bones ]
-      assigns[:query].should == "bill"
-      response.should render_template("leads/search")
+      assigns[:current_query].should == "bill"
+      session[:leads_current_query].should == "bill"
+      response.should render_template("index")
     end
 
     describe "with mime type of XML" do
-      it "should render all found leads as xml" do
+      it "should perform lookup using query string and render XML" do
         request.env["HTTP_ACCEPT"] = "application/xml"
-        get :search, :query => "bill"
+        get :search, :query => "bill?!"
 
         response.body.should == [ @billy_bones ].to_xml
       end
